fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -69,5 +69,6 @@ h2{
 #allSkills{
   display: flex;
   justify-content: space-between;
+  border-bottom : 1px solid #3DAEBA;
 
 }
